# mubo

./: .pre-commit-config.yaml  MANIFEST.in  Makefile  Procfile  README.md  build.sh  manage.py  setup.cfg
src/mubo/: __init__.py  wsgi.py
src/mubo/apps/core/: apps.py  models.py
src/mubo/apps/core/migrations/: 0001_initial.py
src/mubo/apps/shortcodes/: admin.py  apps.py  forms.py  models.py  views.py
src/mubo/apps/shortcodes/migrations/: 0001_initial.py
src/mubo/apps/users/: admin.py  apps.py  models.py
src/mubo/apps/users/migrations/: 0001_add_user_model.py  0001_initial.py
src/mubo/conf/: settings.py  urls.py
src/mubo/static/js/: htmx-ext.js
src/mubo/templates/: base.html
src/mubo/templates/shortcodes/fragments/: create_shortcode_form.html
