[flake8]
ignore = E501,E226,E702,E731,W503
max-line-length = 120

[check-manifest]
ignore =
    *.sublime-project
    .git*
    .vscode/*
    manage.py

[metadata]
name = mubo
version = attr:mubo.__version__
description = Describe your project in one sentence.
long_description = file: README.md
long_description_content_type = text/markdown
author = mubo team
author_email = devs@jinyez.dev
url = https://mubo.me
license = Other/Proprietary License
# If you use a license file activate the line below.
# license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: OS Independent
    # Remove the line below if you want to publish your project on PyPI.
    Private :: Do Not Upload
    Programming Language :: JavaScript
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    django>=4.0,<4.1
    django-extensions
    python-decouple
    django-htmx
    gunicorn
    whitenoise
python_requires = >=3.8

[options.entry_points]
console_scripts =
    django-project=django.core.management:execute_from_command_line

[options.extras_require]
dev =
    check-manifest==0.48
    django-debug-toolbar
    ipython==7.4.0
    Werkzeug<2.1
    watchdog
    django-stubs

[options.packages.find]
where =
    src
